knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/IT_ADT_Email_c__c.field-meta.xml
<CustomField>
    <fullName>IT_ADT_Email_c__c</fullName>
    <externalDeveloperName>IT_ADT_Email__c</externalDeveloperName>
    <label>IT- ADT Email</label>
    <type>Email</type>
</CustomField>