knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Leased_Employees_c__c.field-meta.xml
<CustomField>
    <fullName>Leased_Employees_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Leased_Employees__c</externalDeveloperName>
    <label>Leased Employees</label>
    <type>Checkbox</type>
</CustomField>