knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Leave_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Leave_Status_c__c</fullName>
    <externalDeveloperName>Leave_Status__c</externalDeveloperName>
    <label>Leave Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>