knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Legal_Entity_c__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_c__c</fullName>
    <externalDeveloperName>Legal_Entity__c</externalDeveloperName>
    <label>Legal Entity</label>
    <length>70</length>
    <type>Text</type>
</CustomField>