knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Line_Company_c__c.field-meta.xml
<CustomField>
    <fullName>Line_Company_c__c</fullName>
    <externalDeveloperName>Line_Company__c</externalDeveloperName>
    <label>Line Company</label>
    <type>TextArea</type>
</CustomField>