knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/lng_c__c.field-meta.xml
<CustomField>
    <fullName>lng_c__c</fullName>
    <externalDeveloperName>lng__c</externalDeveloperName>
    <label>Longitude</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>