knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Local_Attractions_c__c.field-meta.xml
<CustomField>
    <fullName>Local_Attractions_c__c</fullName>
    <externalDeveloperName>Local_Attractions__c</externalDeveloperName>
    <label>Local Attractions</label>
    <type>TextArea</type>
</CustomField>