knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Location_of_Call_Room_c__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Call_Room_c__c</fullName>
    <externalDeveloperName>Location_of_Call_Room__c</externalDeveloperName>
    <label>Location of Call Room</label>
    <length>50</length>
    <type>Text</type>
</CustomField>