knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Location_of_ED_schedule_c__c.field-meta.xml
<CustomField>
    <fullName>Location_of_ED_schedule_c__c</fullName>
    <externalDeveloperName>Location_of_ED_schedule__c</externalDeveloperName>
    <label>Location of ED schedule</label>
    <length>50</length>
    <type>Text</type>
</CustomField>