knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/LWOT_c__c.field-meta.xml
<CustomField>
    <fullName>LWOT_c__c</fullName>
    <externalDeveloperName>LWOT__c</externalDeveloperName>
    <label>LWOT %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>