knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/LWOT_Opportunity_c__c.field-meta.xml
<CustomField>
    <fullName>LWOT_Opportunity_c__c</fullName>
    <externalDeveloperName>LWOT_Opportunity__c</externalDeveloperName>
    <label>LWOT Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>