knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Managed_By_c__c.field-meta.xml
<CustomField>
    <fullName>Managed_By_c__c</fullName>
    <externalDeveloperName>Managed_By__c</externalDeveloperName>
    <label>Managed By</label>
    <length>70</length>
    <type>Text</type>
</CustomField>