knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Managed_Care_Opportuntity_c__c.field-meta.xml
<CustomField>
    <fullName>Managed_Care_Opportuntity_c__c</fullName>
    <externalDeveloperName>Managed_Care_Opportuntity__c</externalDeveloperName>
    <label>Managed Care Opportuntity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>