knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Management_Style_c__c.field-meta.xml
<CustomField>
    <fullName>Management_Style_c__c</fullName>
    <externalDeveloperName>Management_Style__c</externalDeveloperName>
    <label>Management Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>