knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Med_Surg_c__c.field-meta.xml
<CustomField>
    <fullName>Med_Surg_c__c</fullName>
    <externalDeveloperName>Med_Surg__c</externalDeveloperName>
    <label>Med_Surg</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>