knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Medicaid_c__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_c__c</fullName>
    <externalDeveloperName>Medicaid__c</externalDeveloperName>
    <label>Medicaid %:</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>