knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Medical_Director_Annual_Fee_c__c.field-meta.xml
<CustomField>
    <fullName>Medical_Director_Annual_Fee_c__c</fullName>
    <externalDeveloperName>Medical_Director_Annual_Fee__c</externalDeveloperName>
    <label>Leadership Monthly Stipend</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>