knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Medical_Executive_Meeting_Aug_c__c.field-meta.xml
<CustomField>
    <fullName>Medical_Executive_Meeting_Aug_c__c</fullName>
    <externalDeveloperName>Medical_Executive_Meeting_Aug__c</externalDeveloperName>
    <label>Medical Executive Meeting - Aug</label>
    <type>Date</type>
</CustomField>