knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Medical_Staff_Office_FAX_c__c.field-meta.xml
<CustomField>
    <fullName>Medical_Staff_Office_FAX_c__c</fullName>
    <externalDeveloperName>Medical_Staff_Office_FAX__c</externalDeveloperName>
    <label>Medical Staff Office FAX #</label>
    <type>Phone</type>
</CustomField>