knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Medicare_c__c.field-meta.xml
<CustomField>
    <fullName>Medicare_c__c</fullName>
    <externalDeveloperName>Medicare__c</externalDeveloperName>
    <label>Medicare %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>