knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Misc_c__c.field-meta.xml
<CustomField>
    <fullName>Misc_c__c</fullName>
    <externalDeveloperName>Misc__c</externalDeveloperName>
    <label>Misc</label>
    <type>TextArea</type>
</CustomField>