knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/MUA_c__c.field-meta.xml
<CustomField>
    <fullName>MUA_c__c</fullName>
    <externalDeveloperName>MUA__c</externalDeveloperName>
    <label>MUA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>