knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/MUA_ID_c__c.field-meta.xml
<CustomField>
    <fullName>MUA_ID_c__c</fullName>
    <externalDeveloperName>MUA_ID__c</externalDeveloperName>
    <label>MUA ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>