knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Nearby_Places_c__c.field-meta.xml
<CustomField>
    <fullName>Nearby_Places_c__c</fullName>
    <externalDeveloperName>Nearby_Places__c</externalDeveloperName>
    <label>Nearby Attractions</label>
    <type>TextArea</type>
</CustomField>