knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/NFP_c__c.field-meta.xml
<CustomField>
    <fullName>NFP_c__c</fullName>
    <externalDeveloperName>NFP__c</externalDeveloperName>
    <label>NFP</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>