knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/NHomeCare_c__c.field-meta.xml
<CustomField>
    <fullName>NHomeCare_c__c</fullName>
    <externalDeveloperName>NHomeCare__c</externalDeveloperName>
    <label>NHomeCare</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>