knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/No_Additional_Doc_c__c.field-meta.xml
<CustomField>
    <fullName>No_Additional_Doc_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>No_Additional_Doc__c</externalDeveloperName>
    <label>No Additional Doc</label>
    <type>Checkbox</type>
</CustomField>