knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/NP_PA_Compensation_Type_c__c.field-meta.xml
<CustomField>
    <fullName>NP_PA_Compensation_Type_c__c</fullName>
    <externalDeveloperName>NP_PA_Compensation_Type__c</externalDeveloperName>
    <label>(NP/PA) Compensation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>