knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/NP_PA_Coverage_Type_c__c.field-meta.xml
<CustomField>
    <fullName>NP_PA_Coverage_Type_c__c</fullName>
    <externalDeveloperName>NP_PA_Coverage_Type__c</externalDeveloperName>
    <label>(NP/PA) Coverage Type</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>