knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/NP_PA_Current_Hour_Coverage_c__c.field-meta.xml
<CustomField>
    <fullName>NP_PA_Current_Hour_Coverage_c__c</fullName>
    <externalDeveloperName>NP_PA_Current_Hour_Coverage__c</externalDeveloperName>
    <label>NP/PA  – Current Hour Coverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>