knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/NP_PA_Hours_Per_Year_c__c.field-meta.xml
<CustomField>
    <fullName>NP_PA_Hours_Per_Year_c__c</fullName>
    <externalDeveloperName>NP_PA_Hours_Per_Year__c</externalDeveloperName>
    <label>(NP/PA) Hours Per Year</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>