knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/NP_PA_Tuesday_c__c.field-meta.xml
<CustomField>
    <fullName>NP_PA_Tuesday_c__c</fullName>
    <externalDeveloperName>NP_PA_Tuesday__c</externalDeveloperName>
    <label>NP/PA Tuesday</label>
    <type>TextArea</type>
</CustomField>