knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/NPI_ID_c__c.field-meta.xml
<CustomField>
    <fullName>NPI_ID_c__c</fullName>
    <externalDeveloperName>NPI_ID__c</externalDeveloperName>
    <label>Medicare Provider Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>