knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Number_of_Annual_Visits_c__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Annual_Visits_c__c</fullName>
    <externalDeveloperName>Number_of_Annual_Visits__c</externalDeveloperName>
    <label>Number of Annual Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>