knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Number_of_ED_Beds_c__c.field-meta.xml
<CustomField>
    <fullName>Number_of_ED_Beds_c__c</fullName>
    <externalDeveloperName>Number_of_ED_Beds__c</externalDeveloperName>
    <label>Number of ED Beds</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>