knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Number_of_Hospital_Employees_c__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hospital_Employees_c__c</fullName>
    <externalDeveloperName>Number_of_Hospital_Employees__c</externalDeveloperName>
    <label>Number of Hospital Employees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>