knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/OK_To_Send_To_Bullhorn_c__c.field-meta.xml
<CustomField>
    <fullName>OK_To_Send_To_Bullhorn_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>OK_To_Send_To_Bullhorn__c</externalDeveloperName>
    <label>OK to send to Bullhorn</label>
    <type>Checkbox</type>
</CustomField>