knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/OneApp_CEID_c__c.field-meta.xml
<CustomField>
    <fullName>OneApp_CEID_c__c</fullName>
    <externalDeveloperName>OneApp_CEID__c</externalDeveloperName>
    <label>OneApp CEID</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>