knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Other_Business_Areas_c__c.field-meta.xml
<CustomField>
    <fullName>Other_Business_Areas_c__c</fullName>
    <externalDeveloperName>Other_Business_Areas__c</externalDeveloperName>
    <label>Other Business Areas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>