knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Other_explain_all_other_categories_c__c.field-meta.xml
<CustomField>
    <fullName>Other_explain_all_other_categories_c__c</fullName>
    <externalDeveloperName>Other_explain_all_other_categories__c</externalDeveloperName>
    <label>Other %:</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>