knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Other_Managed_Care_c__c.field-meta.xml
<CustomField>
    <fullName>Other_Managed_Care_c__c</fullName>
    <externalDeveloperName>Other_Managed_Care__c</externalDeveloperName>
    <label>Other Managed Care</label>
    <length>255</length>
    <type>Text</type>
</CustomField>