knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Out_Patient_Visits_c__c.field-meta.xml
<CustomField>
    <fullName>Out_Patient_Visits_c__c</fullName>
    <externalDeveloperName>Out_Patient_Visits__c</externalDeveloperName>
    <label>Out Patient Visits</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>