knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Overall_Pt_Per_Hour_c__c.field-meta.xml
<CustomField>
    <fullName>Overall_Pt_Per_Hour_c__c</fullName>
    <externalDeveloperName>Overall_Pt_Per_Hour__c</externalDeveloperName>
    <label>Overall Pt. Per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>