knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Overall_Pt_Sat_c__c.field-meta.xml
<CustomField>
    <fullName>Overall_Pt_Sat_c__c</fullName>
    <externalDeveloperName>Overall_Pt_Sat__c</externalDeveloperName>
    <label>Overall Pt. Sat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>