knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Own_Church_c__c.field-meta.xml
<CustomField>
    <fullName>Own_Church_c__c</fullName>
    <externalDeveloperName>Own_Church__c</externalDeveloperName>
    <label>Own Church</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>