knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <externalDeveloperName>Ownership</externalDeveloperName>
    <label>Ownership</label>
    <length>40</length>
    <type>Text</type>
</CustomField>