knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Parent_Account_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Name_c__c</fullName>
    <externalDeveloperName>Parent_Account_Name__c</externalDeveloperName>
    <label>Parent Account Name</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>