knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <externalDeveloperName>ParentId</externalDeveloperName>
    <label>Parent Account / Hospital</label>
    <length>18</length>
    <type>Text</type>
</CustomField>