knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Payor_Mix_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Payor_Mix_Comments_c__c</fullName>
    <externalDeveloperName>Payor_Mix_Comments__c</externalDeveloperName>
    <label>Payor Mix Comments</label>
    <type>TextArea</type>
</CustomField>