knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Payroll_Effective_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Effective_Date_c__c</fullName>
    <externalDeveloperName>Payroll_Effective_Date__c</externalDeveloperName>
    <label>Payroll Effective Date</label>
    <type>Date</type>
</CustomField>