knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/PeopleSoftHospID_c__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoftHospID_c__c</fullName>
    <externalDeveloperName>PeopleSoftHospID__c</externalDeveloperName>
    <label>PeopleSoftHospID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>