knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <externalDeveloperName>Phone</externalDeveloperName>
    <label>Account / Hospital Account Phone</label>
    <type>Phone</type>
</CustomField>