knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Phy_Pt_per_Hour_c__c.field-meta.xml
<CustomField>
    <fullName>Phy_Pt_per_Hour_c__c</fullName>
    <externalDeveloperName>Phy_Pt_per_Hour__c</externalDeveloperName>
    <label>Phy. Pt per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>