knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Phys_Friday_c__c.field-meta.xml
<CustomField>
    <fullName>Phys_Friday_c__c</fullName>
    <externalDeveloperName>Phys_Friday__c</externalDeveloperName>
    <label>Phys. Friday</label>
    <type>TextArea</type>
</CustomField>