knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Phys_Monday_c__c.field-meta.xml
<CustomField>
    <fullName>Phys_Monday_c__c</fullName>
    <externalDeveloperName>Phys_Monday__c</externalDeveloperName>
    <label>Phys. Monday</label>
    <type>TextArea</type>
</CustomField>