knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Phys_Saturday_c__c.field-meta.xml
<CustomField>
    <fullName>Phys_Saturday_c__c</fullName>
    <externalDeveloperName>Phys_Saturday__c</externalDeveloperName>
    <label>Phys. Saturday</label>
    <type>TextArea</type>
</CustomField>