knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Phys_Sunday_c__c.field-meta.xml
<CustomField>
    <fullName>Phys_Sunday_c__c</fullName>
    <externalDeveloperName>Phys_Sunday__c</externalDeveloperName>
    <label>Phys. Sunday</label>
    <type>TextArea</type>
</CustomField>