knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Phys_Thursday_c__c.field-meta.xml
<CustomField>
    <fullName>Phys_Thursday_c__c</fullName>
    <externalDeveloperName>Phys_Thursday__c</externalDeveloperName>
    <label>Phys. Thursday</label>
    <type>TextArea</type>
</CustomField>