knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Phys_Tuesday_c__c.field-meta.xml
<CustomField>
    <fullName>Phys_Tuesday_c__c</fullName>
    <externalDeveloperName>Phys_Tuesday__c</externalDeveloperName>
    <label>Phys. Tuesday</label>
    <type>TextArea</type>
</CustomField>