knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Phys_Wednesday_c__c.field-meta.xml
<CustomField>
    <fullName>Phys_Wednesday_c__c</fullName>
    <externalDeveloperName>Phys_Wednesday__c</externalDeveloperName>
    <label>Phys. Wednesday</label>
    <type>TextArea</type>
</CustomField>