knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Physical_Address_c__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address_c__c</fullName>
    <externalDeveloperName>Physical_Address__c</externalDeveloperName>
    <label>Physical Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>