knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Physical_City_c__c.field-meta.xml
<CustomField>
    <fullName>Physical_City_c__c</fullName>
    <externalDeveloperName>Physical_City__c</externalDeveloperName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>