knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Physical_Country_c__c.field-meta.xml
<CustomField>
    <fullName>Physical_Country_c__c</fullName>
    <externalDeveloperName>Physical_Country__c</externalDeveloperName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>