knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Physical_Zip_c__c.field-meta.xml
<CustomField>
    <fullName>Physical_Zip_c__c</fullName>
    <externalDeveloperName>Physical_Zip__c</externalDeveloperName>
    <label>Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>