knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Physician_Attire_Requirements_c__c.field-meta.xml
<CustomField>
    <fullName>Physician_Attire_Requirements_c__c</fullName>
    <externalDeveloperName>Physician_Attire_Requirements__c</externalDeveloperName>
    <label>Physician Attire Requirements</label>
    <type>TextArea</type>
</CustomField>