knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Physician_Coverage_Hours_Per_Yr_c__c.field-meta.xml
<CustomField>
    <fullName>Physician_Coverage_Hours_Per_Yr_c__c</fullName>
    <externalDeveloperName>Physician_Coverage_Hours_Per_Yr__c</externalDeveloperName>
    <label>(PHY) Hours Per Year</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>