knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Physician_Entities_c__c.field-meta.xml
<CustomField>
    <fullName>Physician_Entities_c__c</fullName>
    <externalDeveloperName>Physician_Entities__c</externalDeveloperName>
    <label>Physician Entity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>